Changes for 1.7.0

 - [ZBX-758] fixed wrong template linking (amach)
 - [ZBX-757] fixed "Bar reports" add item permission problem for users (Vedmak)
 - [ZBX-752] fixed wrong audit logs for trigger actions (Vedmak)
 - [ZBX-483] added sorting to selection box (Artem)
 - [DEV-287] support of PHP4 is removed from source (Artem)
 - [ZBX-714] fixed "No groups defined" message in items list when group is defined (Vedmak)
 - [ZBX-646] audit log entries added for screen edit actions (Vedmak)
 - [ZBX-645] after new installation, filter for audit log is set not to filter anything (Vedmak)
 - [ZBX-643] fixed no print data for bar reports (Artem)
 - [DEV-231] improved dynamic graph usability in slideshow screen (Artem)
 - [DEV-258] added additional reports based on bar graphs (Artem)
 - [DEV-257] added bar graph class (Artem)
 - [DEV-252] improved audit log of host groups,hosts,items and media types (Sasha)
 - [DEV-266] added support of octal and hexadecimal data (Sasha)
 - [DEV-253] improved audit log filtering (Artem)
 - [DEV-267] improved item template-update (Artem)
 - [DEV-261] added triggers status to screens (Artem)
 - [DEV-256] improved multiple labels in maps and support of macros (Sasha)
 - [DEV-265] added popups with links to "Status of trigger" & "Events history" pages (Artem)
 - [DEV-262] added group filtering  for "Trigger info" (Artem)
 - [DEV-259] added internal links (Artem)
 - [DEV-251] added improved screen editing (Artem)
 - [DEV-249] added support of advanced regular expressions (Artem,Sasha)
 - [DEV-247] added enhancement to the Graph function (Artem)
 - [DEV-233,DEV-237] added support of scheduled maintenance periods (Artem,Sasha)

Changes for 1.6.3

 - [DEV-268] added support of <mode> for system.cpu.util under Solaris (Sasha)
 - [ZBX-737] the behaviour of the agent's key "vfs.fs.size" improved to be similar to the "df" command (Dmitry)
 - [ZBX-599] the purpose of the configuration parameter StartAgents precised (Dmitry)